sort.basic.gnome.AlgGnomeSort.scala.error
Erreur de compilation :
AlgGnomeSort:7: error: '(' expected but '{' found.
      if{
        ^